Correct layout for device list
"overlay" is not standard, but helpful here: Like "auto" it shows the
scrollbar only when needed and (different than "auto") it keeps the
layout the same, regardless of whether a scrollbar is shown or not.

--- a/src/Device/DeviceSelector/DeviceList/device-list.scss
+++ b/src/Device/DeviceSelector/DeviceList/device-list.scss
@@ -14,7 +14,7 @@
     .device-list {
         list-style: none;
         padding: 0;
-        overflow-y: scroll;
+        overflow-y: overlay;
         height: calc(100vh - 40px);
         margin-bottom: 0;
 
